Added get and push for foodlist
