# backend/api/openapi.yaml
@@ -73,6 +73,47 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnexpectedError'
 
+  /foodlist:
+    get: 
+      description: Get all items
+      responses:
+        200:
+          description: Successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FoodItem'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+    post:
+      description: Add a food item to list
+      requestBody:
+        description: Food item to add
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewUser'
+      responses:
+        201:
+          description: Successfully added account 
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NewUser'
+        409:
+          description: Food already there
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+
 components:
   schemas:
     Error:
@@ -128,7 +169,17 @@ components:
           pattern: ^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$
         password:
           type: string
-
+          
+    FoodItem:
+      type: object
+      properties:
+        name:
+          type: string
+    NewFoodItem:
+      type: object
+      properties:
+        name:
+          type: string
 
   securitySchemes:
     bearerAuth:            # arbitrary name for the security scheme
